[gd_scene load_steps=9 format=2]

[ext_resource path="res://EnemyControler.gd" type="Script" id=1]
[ext_resource path="res://Animations/DamgeTaken.tres" type="Animation" id=2]
[ext_resource path="res://Textures/EnemyColer.tres" type="Material" id=3]

[sub_resource type="CylinderMesh" id=3]
height = 3.567

[sub_resource type="SphereMesh" id=4]

[sub_resource type="CylinderShape3D" id=5]
height = 3.56668

[sub_resource type="SphereShape3D" id=6]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HeadMesh:material/0")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyMesh:material/0")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}

[node name="Enemy" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource( 1 )

[node name="BodyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.696, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="HeadMesh" type="MeshInstance3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0.003 )
mesh = SubResource( 4 )
material/0 = ExtResource( 3 )

[node name="BodyCollider" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.695769, 0 )
shape = SubResource( 5 )

[node name="HeadCollider" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0 )
shape = SubResource( 6 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DamageTaken" type="AnimationPlayer" parent="."]
playback_speed = 1.25
anims/DamgeTaken = ExtResource( 2 )
anims/RESET = SubResource( 7 )

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
